# cryptobot

./: .autoposter.yml  .env.example  .env.local  .gitignore  CLAUDE.md  CONVENTIONS.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: tistory-dispatch.yml
admin/: index.html  package-lock.json  package.json
admin/src/: App.tsx  main.tsx
admin/src/api/: auth.ts  (+8 more)
data/example/: cryptobot.example.db
docs/work/: docs-work-README.md
news-collector/: collector.py
scripts/: cleanup_old_hold_signals.py  create_admin.py  migrate_add_backtest_results.sql  migrate_add_reconciliation.sql  migrate_llm_before_after.sql  migrate_news_impact_score.sql  reconcile_trades.py  render_llm_prompt.py  run_backtest.py  seed_example_db.py  setup_db.py  start_all.sh  start_daemon.sh  status_daemon.sh  stop_daemon.sh  test_slack.py  test_trade.py
tests/: test_account_daily_loss_guard.py  test_api.py  test_auto_migration.py  test_backtest_sweep.py  test_boundary_edge_cases.py  test_config.py  test_core_coverage.py  test_data_hygiene.py  test_database.py  test_emergency_cooldown_190.py  test_hard_limits_integration.py  test_indicators.py  test_integration.py  test_llm_dynamic_interval.py  test_llm_logic_accuracy.py  test_llm_prompt_rendering.py  test_llm_strategy_switch.py  test_news_impact_score.py  test_order_record_integrity.py  test_per_coin_strategy_152.py  test_periodic_health_check_195.py  test_prompt_caching_183.py  test_recorder.py  test_review_followup_186.py  test_review_round2_188.py  test_risk.py  test_scanner.py  test_strategies.py  test_strategy.py  test_strategy_repository.py  test_strategy_softening.py
(+90 files in other folders)
