[project]
name = "cryptobot"
version = "0.1.0"
description = "Crypto trading bot"
requires-python = ">=3.11"
dependencies = [
    "pyupbit>=0.2.34",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=2.0",
    "apscheduler>=3.10",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]