[project]
name = "cryptobot"
version = "0.1.0"
description = "Crypto trading bot"
requires-python = ">=3.11"
dependencies = [
    "pyupbit>=0.2.34",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=2.0",
    "apscheduler>=3.10",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.28",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "slack_sdk>=3.27",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]